data/derived/comb/progs/unify/prog5554.ml.out
Characters 18-19:
  let _ = List.mem( 3 test);;
                    ^
Error: This expression has type int
       This is not a function; it cannot be applied.
